# VGDatabase

./: .gitattributes  .gitignore  Gemfile  Gemfile.lock~  Prova.txt  README.md  Table.txt  Table.txt~  package.json
.github/workflows/: rails_server.yml
FREEDESKTOP_MIME_TYPES_PATH/: @PaxHeader
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/: HACKING.md  MAINTAINERS  NEWS  meson.build  meson_options.txt
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/.tx/: config
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/data/: freedesktop_generate.sh  meson.build  shared-mime-info-spec.xml
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/data/its/: LICENSE.md
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  check_translations.sh  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  (+40 more)
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/src/: meson.build  test-tree-magic.c  update-mime-database.c
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/tests/: meson.build  test-case-sensitivity.sh  test_duplicate_mime_types.sh  test_generic_icons.sh  test_mime.sh  test_staging.sh
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/tests/mime-db-tests/: .gitignore
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/tests/mime-detection/: 32x-rom.32x  4jsno.669  560051.xml  COPYING-clearsign.asc  COPYING-encrypted.asc  COPYING.asc  FF6FR.IPS  IWAD.WAD  Leafpad-0.8.17-x86_64.AppImage  Leafpad-0.8.18.1.glibc2.4-x86_64.AppImage  Metroid_japan.fds  Oriental_tattoo_by_daftpunk22.eps  PWAD.WAD  SConscript.buildinfo  SConstruct  SLA.bps  TS010082249.pub  androide.k7  appleworks.cwk  ascii.stl  atari-2600-test.A26  atari-7800-test.A78  atari-lynx-chips-challenge.lnx  balloon.j2c  balloon.jp2  balloon.jpf  balloon.jpm  balloon.mj2  bbc.ram  binary.stl  blitz.m7  break.mtm  bug39126-broken.ppm  bug39126-working.ppm  build.gradle  ccfilm.axv  classiq1.hfe  ct_faac-adts.aac  cube.igs  cube.wrl  (+146 more)
FREEDESKTOP_MIME_TYPES_PATH/shared-mime-info-2.0/tests/mime-detection/ostree-repository/.ostree/repo/: summary
VGdatabase/: Gemfile  Gemfile~
VGdatabase/app/controllers/: friends_controller.rb  games_controller.rb  googles_controller.rb  igdb.rb  mylibraries_controller.rb  reviews_controller.rb  sessions_controller.rb  steams_controller.rb
VGdatabase/app/models/: friend.rb  game.rb  mylibrary.rb  mylibrary~  review.rb  user.rb
VGdatabase/config/: application.rb  application.yml  application.yml~  cable.yml  credentials.yml.enc  master.key  puma.rb  routes.rb
VGdatabase/config/environments/: production.rb
VGdatabase/config/initializers/: omniauth.rb
VGdatabase/db/: development.sqlite3  schema.rb
VGdatabase/db/migrate/: 20200417122955_create_reviews.rb  20200418154240_create_friends.rb  20200418164117_friend.rb  20200419125717_add_genre_to_game.rb  20200421145537_create_mylibrary.rb  20200424134905_create_reviews.rb  20200425151922_create_friends.rb  20200425155714_add_favorite_to_friend.rb  20200512162833_add_omniauth_to_users.rb  20200512170722_change_integer_limit.rb  20200512171146_change_integer_limit_reviews.rb  20200513133607_change_google_refresh.rb  20200513134236_add_usernames_to_user.rb  20200513135351_change_limit_google_token.rb  20200513140054_string_tointeger.rb
altro/: logo-reduced.psd
app/assets/stylesheets/: application.css
app/controllers/: friends_controller.rb  games_controller.rb  mylibraries_controller.rb  sessions_controller.rb  steams_controller.rb
app/controllers/guest/: show_controller.rb
app/models/: game.rb  review.rb  user.rb
app/views/games/: contactUs.haml  deleteReviewsGame.haml  deleteUserConfirmation.haml  deletingUser.haml  deletingUser_error.haml  editProfile.haml  editProfileOauth.haml  editProfileOauth_success.haml  editProfile_error.haml  editProfile_success.haml  games.txt  homepage.haml  myLibrary.haml  myLibraryFavorites.haml  searchGame.haml  searchResult.haml  searchUser.haml  settings.haml  show.haml
app/views/layouts/: application.html.erb
app/views/reviews/: edit.haml  (+1 more)
config/: application.yml  credentials.yml.enc  database.yml  master.key  routes.rb  secrets.yml
config/environments/: development.rb  production.rb  test.rb
db/: development.sqlite3  schema.rb
db/migrate/: 20200417122700_create_games.rb  20200428173530_create_avatars.rb  20200513144323_user.rb  20200513145344_review.rb  20200515084929_create_games.rb  20200515084935_friend.rb  20200515084943_create_my_library.rb  20200515084959_create_avatar.rb  20200515085004_user.rb  20200515085012_review.rb
features/: 1_AddUser.feature  2_ChangeUserCred.feature  3_AddGame.feature  4_AddReview.feature  README.txt
features/support/: env.rb  paths.rb
login/: login.haml  login.html  register.html
logo/: logo-noText.psd  logo-normal.psd
public/: 404.haml  404.html  404.html.erb  422.html  500.html
rotten-potatoes/: Gemfile  info.txt
rotten-potatoes/config/: application.rb  cable.yml  routes.rb  routes.rb~  secrets.yml
rotten-potatoes/db/: development.sqlite3  schema.rb  schema.rb~  test.sqlite3
rotten-potatoes/features/: AddMovie.feature
rottenpotatoes/: lol.txt  package.json
rottenpotatoes/config/: routes.rb  routes~
rottenpotatoes/db/: schema.rb
spec/: 1_addFriend_spec.rb  1_addUser_spec.rb  1_registration_spec.rb  2_addFriend_spec.rb  3_adminDeleteReview_spec.rb  3_adminDeleteUser_spec.rb  4_adminDeleteReview_spec.rb  factories.rb  rails_helper.rb  spec_helper.rb
spec/models/: game_spec.rb  review_spec.rb  user_spec.rb
(+1107 files in other folders)
